fix: add statusUpdatedAtFields
